# capability-shell

./: capability-shell.opam  dune-project
lib/cap/: dune  host.ml
lib/shell/: dune
