(library
 (name cap)
 (package capability-shell)
 (modules raw schema process exit_callback host)
 (libraries eio_main capnp-rpc-unix fork_actions pty)
 (flags
  (:standard -w -53-55)))

(rule
 (targets schema.ml schema.mli)
 (deps schema.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
