(library
 (name pty)
 (modules pty)
 (public_name capability-shell.pty)
 (libraries unix)
 (foreign_stubs
  (language c)
  (names pty)))

(library
 (name fork_actions)
 (modules fork_actions)
 (public_name capability-shell.fork_actions)
 (libraries eio_main)
 (foreign_stubs
  (language c)
  (names fork_actions)))
